# iow

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Readme.md  index.html
.ci/: cppcheck.sh  suppressions.txt
.ci/orig/: .gitlab-ci.yml.orig  .travis.yml.orig  deploy.sh.orig
.cppcheck/: suppressions.txt
.github/: build_history.txt
.github/workflows/: boost-setup.sh  mamba-ready.yml  mambaru.yml  master.yml
cmake/: mambalibs.cmake  mambaopt.cmake  mambaru.cmake
cov-report/: index-sort-f.html  index-sort-l.html  index.html
cov-report/iow/: index-sort-f.html  index-sort-l.html  index.html  logger.hpp.func-sort-c.html  logger.hpp.func.html  logger.hpp.gcov.html  memory.hpp.func-sort-c.html  memory.hpp.func.html  memory.hpp.gcov.html
cov-report/iow/io/: index-sort-f.html  index-sort-l.html  index.html  io_base.hpp.func-sort-c.html  io_base.hpp.func.html  io_base.hpp.gcov.html  io_id.hpp.func-sort-c.html  io_id.hpp.func.html  io_id.hpp.gcov.html  types.hpp.func-sort-c.html  types.hpp.func.html  types.hpp.gcov.html
cov-report/iow/io/aux/: index-sort-f.html  index-sort-l.html  index.html  read_buffer.cpp.func-sort-c.html  read_buffer.cpp.func.html  read_buffer.cpp.gcov.html  read_buffer.hpp.func-sort-c.html  read_buffer.hpp.func.html  read_buffer.hpp.gcov.html  read_buffer_options.hpp.func-sort-c.html  read_buffer_options.hpp.func.html  read_buffer_options.hpp.gcov.html  write_buffer.cpp.func-sort-c.html  write_buffer.cpp.func.html  write_buffer.cpp.gcov.html  write_buffer.hpp.func-sort-c.html  write_buffer.hpp.func.html  write_buffer.hpp.gcov.html  write_buffer_options.hpp.func-sort-c.html  write_buffer_options.hpp.func.html  write_buffer_options.hpp.gcov.html
cov-report/iow/io/basic/: ad_create_id.hpp.func-sort-c.html  ad_create_id.hpp.func.html  ad_create_id.hpp.gcov.html  ad_reset.hpp.func-sort-c.html  ad_reset.hpp.func.html  ad_reset.hpp.gcov.html  ad_shutdown.hpp.func-sort-c.html  ad_shutdown.hpp.func.html  ad_shutdown.hpp.gcov.html  ad_start.hpp.func-sort-c.html  ad_start.hpp.func.html  ad_start.hpp.gcov.html  ad_stop.hpp.func-sort-c.html  ad_stop.hpp.func.html  ad_stop.hpp.gcov.html  ad_wrap.hpp.func-sort-c.html  ad_wrap.hpp.func.html  ad_wrap.hpp.gcov.html  context.hpp.func-sort-c.html  context.hpp.func.html  context.hpp.gcov.html  (+3 more)
cov-report/iow/mutex/: index-sort-f.html  index-sort-l.html  index.html  rwlock.hpp.func-sort-c.html  rwlock.hpp.func.html  rwlock.hpp.gcov.html
cov-report/iow/owner/: callback_handler.hpp.func-sort-c.html  callback_handler.hpp.func.html  callback_handler.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  owner.hpp.func-sort-c.html  owner.hpp.func.html  owner.hpp.gcov.html  owner_handler.hpp.func-sort-c.html  owner_handler.hpp.func.html  owner_handler.hpp.gcov.html
cov-report/tests/aux/: index-sort-f.html  index-sort-l.html  index.html  read_buffer_test.cpp.func-sort-c.html  read_buffer_test.cpp.func.html  read_buffer_test.cpp.gcov.html  write_buffer_test.cpp.func-sort-c.html  write_buffer_test.cpp.func.html  write_buffer_test.cpp.gcov.html
cov-report/tests/io/: dgram_holder_suite.cpp.func-sort-c.html  dgram_holder_suite.cpp.func.html  dgram_holder_suite.cpp.gcov.html  factory_suite.cpp.func-sort-c.html  factory_suite.cpp.func.html  factory_suite.cpp.gcov.html  flow_suite.cpp.func-sort-c.html  flow_suite.cpp.func.html  flow_suite.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  io_base_suite.cpp.func-sort-c.html  io_base_suite.cpp.func.html  io_base_suite.cpp.gcov.html  io_test.cpp.func-sort-c.html  io_test.cpp.func.html  io_test.cpp.gcov.html  pipe_suite.cpp.func-sort-c.html  pipe_suite.cpp.func.html  pipe_suite.cpp.gcov.html  stream_holder_suite.cpp.func-sort-c.html  stream_holder_suite.cpp.func.html  stream_holder_suite.cpp.gcov.html  stream_suite.cpp.func-sort-c.html  stream_suite.cpp.func.html  stream_suite.cpp.gcov.html
cov-report/tests/owner/: index-sort-f.html  index-sort-l.html  index.html  owner_test.cpp.func-sort-c.html  owner_test.cpp.func.html  owner_test.cpp.gcov.html
iow/: asio.hpp  logger.hpp  mutex.hpp  version.hpp
iow/io/: io_base.hpp  stat.hpp
iow/io/acceptor/: ad_accept_handler.hpp  ad_async_accept.hpp  ad_listen.hpp  ad_make_handler.hpp  ad_next.hpp
iow/io/aux/: buffer_stat.hpp  global_pool.cpp  global_pool.hpp  read_buffer.cpp  read_buffer.hpp  read_buffer_options.hpp  read_buffer_options_json.hpp  write_buffer.cpp  write_buffer.hpp  write_buffer_options.hpp  write_buffer_options_json.hpp
iow/io/basic/: ad_wrap.hpp  aspect.hpp  context.hpp
iow/io/client/: client.hpp  connection.hpp  multi_base.hpp  multi_client.hpp  multi_thread.hpp  options.hpp  options_json.hpp  thread.hpp
iow/io/descriptor/: ad_initialize.hpp  holder.hpp  manager.hpp  mtdup.hpp  thread.hpp
iow/io/rw/: ad_initialize.hpp
iow/io/server/: server.hpp
iow/io/socket/: ad_initialize.hpp
iow/io/strand.del/: mtholder.hpp
iow/mutex/: spinlock.hpp
iow/owner/: owner.hpp
tests/: CMakeLists.txt
tests/aux/: CMakeLists.txt  read_buffer_bench.cpp  read_buffer_bench_big.cpp  read_buffer_test.cpp  write_buffer_bench.cpp  write_buffer_leak.cpp  write_buffer_test.cpp
tests/io/: CMakeLists.txt  dgram_holder_suite.cpp  factory_suite.cpp  flow_suite.cpp  io_base_suite.cpp  pipe_suite.cpp  stream_holder_suite.cpp  stream_suite.cpp  tcp_acceptor.cpp  tcp_client.cpp  udp_test.cpp
tests/owner/: CMakeLists.txt
(+217 files in other folders)
